# palourde

./: README.md  main.py  pyproject.toml
demo/API Platform Demo/: api-platform-s-demo.md  api_platform.postman_collection.json
demo/Docker API/: docker-hub-api.md  docker_api.postman_collection.json
demo/Google Analytics API/: google-analytics-api.md  google_analytics_api.postman_collection.json
demo/Microsoft Graph API/: Microsoft Graph.postman_collection.json  microsoft-graph.md
demo/Notion API/: notion-api.md  notion_api.postman_collection.json
demo/Spotify Playlist API/: Spotify Playlist Generator.postman_collection.json  spotify-playlist-generator.md
demo/Twitter API/: Twitter API v2.postman_collection.json  twitter-api-v2.md
palourde/: __init__.py  classes.py  cmdline.py  collection.py  collection_item.py  collection_item_request.py  collection_item_response.py  main.py  request_body.py  request_url.py
