[project]
name = "palourde"
version = "1.0.0"
authors = [
    { name = "Victor Martin", email = "vicmartindev@gmail.com" },
]
description = "Converts v2.1 Postman Collections into Markdown Files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bagabool/palourde"

[build-system]
requires = ["hatchling", "dacite", "slugify"]
build-backend = "hatchling.build"

[project.scripts]
palourde = "palourde.cmdline:execute"