[project]
name = "palourde"
version = "1.0.4"
authors = [
    { name = "Victor Martin", email = "vicmartindev@gmail.com" },
]
description = "Converts v2.1 Postman Collections into Markdown Files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "dacite>=1.7.0",
    "python-slugify>=7.0.0"
]

[project.urls]
"Homepage" = "https://github.com/bagabool/palourde"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
palourde = "palourde.cmdline:execute"